readme/release notes/.gitignore updates